--- a/practice.html
+++ b/practice.html
@@ -99,6 +99,7 @@
                     whether you're curious about your features, a free trial,or even press, we're here to answer any questions.
                 </p>
                 <button class="btn btn-primary">Let's talk now</button>
+                <button class="btn btn-primary">Let's talk now</button>
                 </div>
                 </section>
                 <footer>
